NEWS for the R Package Luminescence

Changes in version 0.9.0 (, 2019):

  New functions:

         • ‘fit_OSLLifeTimes()’ Fit and deconvolution of OSL lifetimes
           using off-time measurements, i.e.  after the stimulation was
           switched off.

         • ‘plot_DRCSummary()’ Summarise all dose-response curves from
           your SAR OSL analysis in one single plot.

         • ‘scale_GammaDose()’ Scale the gamma dose rate considering
           layer-to-layer variations in soil radioactivity. Contributed
           by S. Riedesel and M. Autzen.

         • ‘fit_ThermalQuenching()’ Provide an easy option to fit
           thermal quenching data and determine the activation energy.

         • ‘read_RF2R()’ Add support for importing spatially resolved
           RF measurement results.

  Bugfixes and changes:

         • ‘analyse_FadingMeasurements()’

             • Enable support for data imported from a BIN/BINX-file.
