@@ -27,3 +27,8 @@ Changes in version 0.9.0 (, 2019):
 
              • Enable support for data imported from a BIN/BINX-file.
 
+         • ‘read_BIN2R()’ In the autofile recognition (only a path
+           instead of a file is provided), sometimes the found
+           BIN/BINX-files were imported twice. The corresponding code
+           was simplified to avoid such errors in future.
+
